Fixed changing colors for dark mode devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,15 @@
       --color-background: 21 21 28;
       --color-highlight: 9 47 73;
     }
+    :root[color-s="light"] {
+      --color-primary: 7 89 133;
+      --color-primary-light: 3 105 161;
+      --color-primary-dark: 12 74 110;
+      --color-secondary: 148 163 184;
+      --color-overlay: 2 6 23;
+      --color-background: 255 255 255;
+      --color-highlight: 186 230 253;
+    }
   }
   :root[color-s="dark"] {
     --color-primary: 186 230 253;
